[tool.poetry]
name = "vrp-solver"
version = "0.1.0"
description = "Capacitated Vehicle Routing Problem with Time Windows (CVRPTW) solver written in Python."
authors = ["Soshi Katsuta"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
ortools = "^9.0.9048"
pygraphviz = "^1.7"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Black compatible configurations for isort
# Ref. https://black.readthedocs.io/en/stable/compatible_configs.html#isort
[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
