[tool.poetry]
name = "vrp-solver"
version = "1.0.0"
description = "Capacitated Vehicle Routing Problem with Time Windows (CVRPTW) solver written in Python."
authors = ["Soshi Katsuta <soshi.katsuta@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10"
ortools = "~9.4"
pyyaml = "~6.0"
graphviz = "~0.20"

[tool.poetry.dev-dependencies]
black = "~22.8"
flake8 = "~5.0"
isort = "~5.10"
pyright = "~1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# isort configuration compatible with Black
# Ref. https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
# Ref. https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort
[tool.isort]
profile = "black"
